--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ fastapi==0.115.6
 uvicorn[standard]==0.30.6
 aiomqtt==2.3.0
 pydantic==2.10.3
+pydantic-settings==2.6.1
 sqlalchemy==2.0.36
 asyncpg==0.30.0
+pytest==8.3.4
